--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,7 @@
     color: white
 }
 
-.p-graphic1{
+.p-graphic{
     color: black;
     background-color: #81C784;
     padding-right: auto;
@@ -47,13 +47,13 @@
     margin-bottom: 0;
 }
 
-.dropdown-graphic1{
+.dropdown-graphic{
     color: black;
     font-family: auto;
     font-weight: bold;
 }
 
-.output-counter-div{
+.output-graphic-div{
     width: auto;
     padding-left: 10px;
     padding-right: 10px;
